fixed menu btn blue color and autocomplete lokacija on mobile

--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -20,6 +20,7 @@
       width: 50px;
       height: 50px;
       cursor: pointer;
+      -webkit-tap-highlight-color: transparent;
     }
 
     .header-top__site-branding {
